# sap1-amaranth

./: .gitignore  LICENSE  README.md  alu.py  beneater.py  clock_control.py  counter_register.py  data_bus.py  demo.py  front_panel.py  led_panel.py  main.py  memory.py  microcode.py  monolith.py  partial_register.py  pyproject.toml  register.py  sap1.py  sap1_panel.py  synth.py  tang_nano_20k.py  tm1637.py
dev_boards/: tang_nano_20k.py
docs/: isa.md
fpga_io/: button.py  led_panel.py  tm1637.py
monolith/: README.md  monolith.py
sap1/: clock_control.py  front_panel.py  prog_control.py  sap1_panel.py  synth.py
sap1/core/: alu.py  counter_register.py  input_register.py  register.py  sap1.py
sap1/monolith/: README.md  __main__.py  monolith.py
tests/: demo.py
