[project]
name = "sap1-amaranth"
version = "0.1.0"
description = "Implementation of the SAP-1 computer architecture in Amaranth HDL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amaranth",
    "amaranth-boards",
    "yowasp-nextpnr-himbaechel-gowin>=0.7.0.177.post611.dev0",
    "yowasp-yosys",
]

[tool.uv.sources]
amaranth-boards = { git = "https://github.com/dmoisset/amaranth-boards" }
amaranth = { path = "../../src/3rdparty/amaranth" }
# amaranth = { git = "https://github.com/dmoisset/amaranth" }

[tool.pyright]
reportInvalidTypeForm = "none"
typeCheckingMode = "off"
